fix(header): alignment of logo with no nav menu

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -9,6 +9,7 @@
 .header {
   display: flex;
   align-items: center;
+  gap: 16px;
   position: fixed;
   top: 0;
   right: 0;
@@ -16,7 +17,7 @@
   height: var(--kd-header-height);
   background: var(--kd-color-neutral-webgray);
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
-  padding: 4px 12px 4px 16px;
+  padding: 4px var(--kd-page-gutter);
   transition: z-index 150ms ease-out;
   z-index: var(--kd-z-header);
 
@@ -43,7 +44,7 @@
 .logo-link {
   display: flex;
   align-items: center;
-  margin-left: 16px;
+  // margin-left: 16px;
   // color: var(--kd-color-text-link);
   text-decoration: none;
 
